--- a/PhoneStore/Views/Account/Login.cshtml
+++ b/PhoneStore/Views/Account/Login.cshtml
@@ -17,9 +17,9 @@
             <span asp-validation-for="Password"></span>
         </div>
         <div>
-            <label asp-for="Remember">Remember me?</label>
+            <label asp-for="Remember">Remember me?</label><br/>
             <input asp-for="Remember" />
         </div>
-        <input id="inputLoginForm" class="btn btn-primary" type="submit" value="Login" />
+        <input class="btn btn-primary" type="submit" value="Login" />
     </form>
 </div>
