--- a/PhoneStore/Views/Account/Register.cshtml
+++ b/PhoneStore/Views/Account/Register.cshtml
@@ -25,6 +25,6 @@
             <input class="form-control" asp-for="ConfirmPassword" />
             <span asp-validation-for="ConfirmPassword"></span>
         </div>
-        <input class="btn btn-primary" id="inputRegisterForm" type="submit" value="Register" />
+        <input class="btn btn-primary" type="submit" value="Register" />
     </form>
 </div>
